<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/menu_more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_import"
                android:title="@string/menu_import" />
            <item
                android:id="@+id/action_export"
                android:title="@string/menu_export" />
        </menu>
    </item>
</menu>